fix: modify existing CSS styles

--- a/vite-project/src/components/nav/nav.css
+++ b/vite-project/src/components/nav/nav.css
@@ -19,8 +19,15 @@ ul {
   display: none;
 }
 
+.hamburger-icon {
+  color: #9e9aa7;
+  cursor: pointer;
+  transition: 2s ease;
+}
+
+
 @media screen and (min-width: 768px) {
-  nav .hamburger {
+  nav .hamburger-icon {
     display: none;
   }
 
