--- a/vite-project/src/app.css
+++ b/vite-project/src/app.css
@@ -3,17 +3,70 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 3rem auto;
+  justify-self: center;
+  margin: 2rem auto;
   width: 85%;
 }
 
 .intro h2 {
-  font-size: 3rem;
-  font-weight: 700;
+  font-size: 2.4rem;
+  font-weight: 800;
+  margin-bottom: 0;
 }
 
 .intro p {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 800;
+  margin-top: 1rem;
+}
+
+.intro span {
+  font-size: 1.2rem;
+  font-weight: 800;
+}
+
+.working-img {
+  display: block;
+  width: 100%;
+}
+
+.start-button {
   margin-top: 2rem;
+  padding: 1.2rem 2rem;
+  border: none;
+  border-radius: 2rem;
+  background: #000;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 800;
+  cursor: pointer;
+  width: 12rem;
+}
+
+@media screen and (min-width: 478px) {
+  .intro {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    justify-self: center;
+    margin: 3rem auto;
+    width: 85%;
+  }
+
+  .intro h2 {
+    font-size: 3rem;
+    font-weight: 700;
+  }
+
+  .intro p {
+    font-size: 1.5rem;
+    font-weight: 800;
+    margin-top: 2rem;
+  }
+
+  .intro span {
+    font-size: 1.5rem;
+    font-weight: 800;
+  }
 }
