--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -22,9 +22,7 @@ ul {
 .hamburger-icon {
   color: #9e9aa7;
   cursor: pointer;
-  transition: 2s ease;
 }
-
 
 @media screen and (min-width: 768px) {
   nav .hamburger-icon {
@@ -33,6 +31,7 @@ ul {
 
   ul {
     display: flex;
+    flex-direction: row;
     font-size: 1.2rem;
     font-weight: 500;
   }
@@ -44,6 +43,5 @@ ul {
 
   li a {
     text-decoration: none;
-    color: red;
   }
 }
