--- a/src/app.css
+++ b/src/app.css
@@ -18,18 +18,20 @@ header .working-img {
   font-size: 2.4rem;
   font-weight: 700;
   margin-bottom: 0;
-  color: var(--very-dark-violet);
+  color: hsl(260, 8%, 14%);
 }
 
 .intro p {
   font-size: 1rem;
   font-weight: 500;
   margin-top: 1rem;
+  color: hsl(0, 0%, 75%);
 }
 
 .intro span {
   font-size: 1rem;
   font-weight: 500;
+  color: hsl(0, 0%, 75%);
 }
 
 .working-img {
@@ -39,15 +41,19 @@ header .working-img {
 
 .start-button {
   margin-top: 2rem;
-  padding: 1.2rem 2rem;
+  padding: 0.9rem 2rem;
   border: none;
   border-radius: 2rem;
   background: var(--Cyan);
   color: #fff;
-  font-size: 1.2rem;
+  font-size: 1.3rem;
   font-weight: 800;
   cursor: pointer;
-  width: 12rem;
+  width: 13rem;
+}
+
+.start-button:last-child {
+  margin-top: 1rem;
 }
 
 .feature-intro {
@@ -67,17 +73,21 @@ header .working-img {
 .feature-intro h2 {
   font-size: 1.8rem;
   font-weight: 700;
+  color: hsl(260, 8%, 14%);
+  margin-top: 6rem;
 }
 
 .feature-intro p {
   font-size: 1rem;
   font-weight: 500;
   margin-top: 1rem;
+  color: hsl(0, 0%, 75%);
 }
 
 .feature-intro span {
   font-size: 1rem;
   font-weight: 500;
+  color: hsl(0, 0%, 75%);
 }
 
 .card-container {
@@ -97,19 +107,42 @@ header .working-img {
   margin: 3rem auto;
   padding: 2rem;
   background-color: #fff;
-  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 0.3rem rgba(152, 152, 152, 0.2);
+  border-radius: 0.3rem;
+  z-index: 9998;
 }
 
 .feature-card h3 {
   font-size: 1.5rem;
   font-weight: 700;
-  margin-bottom: 0;
+  color: hsl(260, 8%, 14%);
 }
 
 .feature-card p {
   font-size: 1rem;
   font-weight: 500;
   margin-top: 1rem;
+  color: hsl(0, 0%, 75%);
+}
+
+.feature-card-circle {
+  width: 5.7rem;
+  height: 5.7rem;
+  border-radius: 50%;
+  background-color: hsl(257, 27%, 26%);
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-4.7rem);
+}
+
+.cyan-bar {
+  height: 7rem;
+  width: 0.5rem;
+  background-color: var(--Cyan);
+  z-index: -9999;
+  transform: translateY(9rem);
 }
 
 .boost-cta {
@@ -120,7 +153,7 @@ header .working-img {
   justify-self: center;
   margin: 0 auto;
   width: 100%;
-  height: 17rem;
+  height: 19rem;
   background-image: url(../images/bg-boost-mobile.svg);
   background-repeat: no-repeat;
   background-color: #3b3054;
