--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -9,11 +9,11 @@ footer {
 }
 
 footer h3 {
-  font-size: 0.8rem;
+  font-size: 1.4rem;
   font-weight: 700;
   color: #fff;
   margin: 1rem auto;
-  transform: translate(16%);
+  text-align: center;
 }
 
 footer ul {
@@ -25,15 +25,19 @@ footer ul {
 }
 
 footer li {
-  font-size: 0.8rem;
+  font-size: 1.2rem;
   font-weight: 500;
   list-style: none;
   margin: 0.3rem 0;
   color: var(--Gray);
 }
 
+footer li:hover {
+  color: var(--Cyan);
+}
+
 footer li:last-child {
-  margin-bottom: 1rem;
+  margin-bottom: 1.2rem;
 }
 
 .footer-bottom {
@@ -42,14 +46,30 @@ footer li:last-child {
   align-items: center;
   justify-content: center;
   width: 100%;
-  margin-top: 1.3rem;
+  margin-top: 1.6rem;
 }
 
 .footer-logo {
   margin-top: 1.7rem;
-  margin-bottom: 2rem;
+  margin-bottom: 2.2rem;
 }
 
 .footer-bottom img {
-  padding: 0 0.6rem;
+  padding: 0 1rem;
+  margin-bottom: 2rem;
+}
+
+@media screen and (min-width: 1024px) {
+  footer {
+    flex-direction: row;
+  }
+
+  .footer-links {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
 }
