--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,19 +1,29 @@
 footer {
+  width: 100%;
+  background-color: var(--Very-Dark-Violet);
+}
+
+.footer-container {
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  padding: 2rem 5rem;
+}
+
+.footer-logo-container {
+  display: flex;
   justify-content: center;
-  width: 100%;
-  padding: 2rem 0;
-  background-color: var(--Very-Dark-Violet);
+  align-items: center;
+  margin-bottom: 1.6rem;
+  margin-top: 2.5rem;
 }
 
 footer h3 {
   font-size: 1.4rem;
   font-weight: 700;
   color: #fff;
-  margin: 1rem auto;
   text-align: center;
+  margin-bottom: 1.2rem;
 }
 
 footer ul {
@@ -40,36 +50,55 @@ footer li:last-child {
   margin-bottom: 1.2rem;
 }
 
-.footer-bottom {
+.social-container {
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: center;
-  width: 100%;
-  margin-top: 1.6rem;
 }
 
-.footer-logo {
-  margin-top: 1.7rem;
-  margin-bottom: 2.2rem;
+.social-container img {
+  width: 2.5rem;
+  height: 2.5rem;
+  margin: 0 1rem;
+  cursor: pointer;
 }
 
-.footer-bottom img {
-  padding: 0 1rem;
+.footer-links {
   margin-bottom: 2rem;
 }
 
+.footer-link {
+  margin-top: 2.5rem;
+}
+
 @media screen and (min-width: 1024px) {
-  footer {
+  .footer-container {
     flex-direction: row;
+    justify-content: space-between;
+    margin: 0 auto;
+    padding: 5rem;
+  }
+
+  .footer-logo-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin-top: 0;
   }
 
   .footer-links {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-    width: 100%;
-    height: 100%;
+  }
+
+  .footer-link {
+    width: 17rem;
+    display: flex;
+    flex-direction: column;
+    margin-top: 0;
+  }
+
+  .social-container {
+    padding: 0 1rem;
+    width: 20rem;
   }
 }
